# sprout-counter

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.cache/clangd/index/: gpio.c.6AC05C23F3D0F36E.idx  gpio.h.079277681C4C0D56.idx  main.c.17637A37115EEA11.idx  stm32f1xx_hal_conf.h.E66A0987AF698D46.idx  stm32f1xx_it.c.4BBC80D692B1B578.idx  stm32f1xx_it.h.CD5545F3E00EA47E.idx  system.c.0737545FFCEC5D09.idx  system.h.0BB9AB64E2424CD1.idx  system_stm32f1xx.c.C7BA1ECCA92463AD.idx
apps/: main.c
apps/drivers/include/: drv_gpio.h
apps/drivers/src/: drv_gpio.c
apps/setup/include/: app_setup.h
apps/setup/src/: app_setup.c
board/: stm32f1xx_hal_conf.h  stm32f1xx_it.c  syscalls.c
boards/bluepill_f103/: linker.ld
boards/bluepill_f103/config/: board_pins.h
cmake/: arm-gcc-toolchain.cmake  arm-none-eabi-gcc.cmake  hal_f1_min.cmake
src/: main.c
src/drivers/display/: display.c  display.h
src/drivers/gpio/: gpio.c  gpio.h
src/drivers/i2c/: i2c.c  i2c.h
src/drivers/ir/: ir.c  ir.h
src/drivers/system/: system.c  system.h
